Add GLFW source dependency for non-linux desktop platforms

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,9 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     find_package(Lua REQUIRED)
     find_package(glm REQUIRED)
     find_package(Freetype REQUIRED)
+    if (DESKTOP)
+        find_package(glfw3 REQUIRED)
+    endif()
 else()
     include(FetchContent)
 
@@ -27,6 +30,15 @@ else()
         GIT_TAG 	b04db3872cfac5ee4fd4f895933cebce3576fbf0
     )
     FetchContent_MakeAvailable(freetype)
+
+    if (DESKTOP)
+        FetchContent_Declare(
+            glfw
+            GIT_REPOSITORY	https://github.com/glfw/glfw.git
+            GIT_TAG 	ac10768495837eb98da27d01fe706073d6d251c2
+        )
+        FetchContent_MakeAvailable(glfw)
+    endif()
 endif()
 
 file(GLOB_RECURSE SOURCES "*.cpp")
@@ -34,7 +46,6 @@ file(GLOB_RECURSE SOURCES "*.cpp")
 list(FILTER SOURCES EXCLUDE REGEX "platform/.*$")
 
 if (DESKTOP)
-    find_package(glfw3 REQUIRED)
     file(GLOB_RECURSE DESKTOP_SOURCES "platform/desktop/*.cpp")
     list(APPEND SOURCES ${DESKTOP_SOURCES})
 endif()
@@ -43,10 +54,14 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(Game ${SOURCES})
-target_link_libraries(Game PRIVATE glad glfw glm::glm)
+target_link_libraries(Game PRIVATE glad glm::glm)
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     target_link_libraries(Game PRIVATE lua Freetype::Freetype)
 else()
     target_link_libraries(Game PRIVATE lua_static freetype)
+endif()
+
+if (DESKTOP)
+    target_link_libraries(Game PRIVATE glfw)
 endif()
