Add Android support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,9 @@ if (MSVC)
     set(CMAKE_CXX_FLAGS "/EHsc")
     set(CMAKE_CXX_FLAGS_RELEASE "/O2")
 else()
+    set(CMAKE_CXX_FLAGS "-fexceptions")
     set(CMAKE_CXX_FLAGS_DEBUG "-g3")
+    set(CMAKE_C_FLAGS_DEBUG "-g3")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 endif()
 
