--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,10 @@ else()
     )
     FetchContent_MakeAvailable(freetype)
 
-    cmake_policy(SET CMP0135 NEW)
+    if(POLICY CMP0135)
+        cmake_policy(SET CMP0135 NEW)
+        set(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
+    endif()
     FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.12.0/json.tar.xz)
     FetchContent_MakeAvailable(json)
 endif()
@@ -56,13 +59,24 @@ if (DESKTOP)
     endif()
     file(GLOB_RECURSE DESKTOP_SOURCES "platform/desktop/*.cpp")
     list(APPEND SOURCES ${DESKTOP_SOURCES})
-    add_executable(Game ${SOURCES})
+    set(TARGET Game)
+    add_executable(${TARGET} ${SOURCES})
     list(APPEND LIBRARIES glad glfw)
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Android")
     find_package(game-activity REQUIRED CONFIG)
+    set(CMAKE_SHARED_LINKER_FLAGS
+            "${CMAKE_SHARED_LINKER_FLAGS} -u \
+            Java_com_google_androidgamesdk_GameActivity_initializeNativeCode")
     file(GLOB_RECURSE ANDROID_SOURCES "platform/android/*.cpp")
     list(APPEND SOURCES ${ANDROID_SOURCES})
-    add_library(engine SHARED ${SOURCES})
+    set(TARGET engine)
+    add_library(${TARGET} SHARED ${SOURCES})
+endif()
+
+target_compile_definitions(${TARGET} PUBLIC "$<$<CONFIG:DEBUG>:ENGINE_DEBUG>")
+if (ENGINE_MEMORY_SANITIZER)
+    target_compile_options(${TARGET} PUBLIC -fsanitize=hwaddress -fno-omit-frame-pointer)
+    target_link_options(${TARGET} PUBLIC -fsanitize=hwaddress)
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
@@ -82,7 +96,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Android")
 endif()
 
 if (DESKTOP)
-    target_link_libraries(Game PRIVATE ${LIBRARIES})
+    target_link_libraries(${TARGET} PRIVATE ${LIBRARIES})
 else()
-    target_link_libraries(engine ${LIBRARIES})
+    target_link_libraries(${TARGET} ${LIBRARIES})
 endif()
