--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,20 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Android")
     endif()
 endif()
 
-if (MSVC)
-    set(CMAKE_CXX_FLAGS "/EHsc")
-    set(CMAKE_CXX_FLAGS_RELEASE "/O2")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if (NOT MSVC)
+        add_compile_options(-g3)
+    endif()
 else()
-    set(CMAKE_CXX_FLAGS "-fexceptions")
-    set(CMAKE_CXX_FLAGS_DEBUG "-g3")
-    set(CMAKE_C_FLAGS_DEBUG "-g3")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+    if (NOT MSVC)
+        add_compile_options(-O3)
+    endif()
+endif()
+
+if (MSVC)
+    add_compile_options(/EHsc /O2)
+else()
+    add_compile_options(-fexceptions)
 endif()
 
 if ((CMAKE_SYSTEM_NAME STREQUAL "Linux") OR (CMAKE_SYSTEM_NAME STREQUAL "Windows") OR (CMAKE_SYSTEM_NAME STREQUAL "Darwin"))
