Split game and Engine into two repos, improve build system, allow custom runtime directory and engine assets copying

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,7 +46,7 @@ list(FILTER SOURCES EXCLUDE REGEX "platform/.*$")
 
 set(LIBRARIES upng glm::glm nlohmann_json::nlohmann_json)
 
-if (DESKTOP)
+if (ENGINE_DESKTOP)
     if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         find_package(glfw3 REQUIRED)
     else()
@@ -57,9 +57,13 @@ if (DESKTOP)
         )
         FetchContent_MakeAvailable(glfw)
     endif()
-    file(GLOB_RECURSE DESKTOP_SOURCES "platform/desktop/*.cpp")
-    list(APPEND SOURCES ${DESKTOP_SOURCES})
-    set(TARGET Game)
+    file(GLOB_RECURSE ENGINE_DESKTOP_SOURCES "platform/desktop/*.cpp")
+    list(APPEND SOURCES ${ENGINE_DESKTOP_SOURCES})
+    if (ENGINE_DESKTOP_EXECUTABLE_NAME)
+        set(TARGET ${ENGINE_DESKTOP_EXECUTABLE_NAME})
+    else()
+        set(TARGET Game)
+    endif()
     add_executable(${TARGET} ${SOURCES})
     list(APPEND LIBRARIES glad glfw)
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Android")
@@ -95,8 +99,18 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Android")
         log)
 endif()
 
-if (DESKTOP)
+if (ENGINE_DESKTOP)
     target_link_libraries(${TARGET} PRIVATE ${LIBRARIES})
+    if (ENGINE_DESKTOP_RUNTIME_DIR)
+        set_target_properties(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${ENGINE_DESKTOP_RUNTIME_DIR})
+    else()
+        set_target_properties(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+    endif()
 else()
     target_link_libraries(${TARGET} ${LIBRARIES})
+endif()
+
+if (ENGINE_ASSETS_DIR_COPY)
+    add_custom_command(TARGET ${TARGET} POST_BUILD
+                       COMMAND ${CMAKE_COMMAND} -E copy_directory "${PROJECT_SOURCE_DIR}/assets" "${ENGINE_ASSETS_DIR_COPY_PATH}/assets")
 endif()
