--- a/lib/Glad/CMakeLists.txt
+++ b/lib/Glad/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
 
 add_subdirectory(src)
+target_include_directories(glad PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
