--- a/lib/upng/CMakeLists.txt
+++ b/lib/upng/CMakeLists.txt
@@ -4,4 +4,4 @@ set(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/upng/upng.c")
 
 set_source_files_properties(${SOURCES} PROPERTIES LANGUAGE CXX)
 add_library(upng ${SOURCES})
-target_include_directories(upng PUBLIC "${CMAKE_SOURCE_DIR}/lib/upng/")
+target_include_directories(upng PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
